Fix `String#index` to clear MatchData when a regexp is passed

[Bug #20421]

The bug was fixed in Ruby 3.3 via 9dcdffb8bf8a3654fd78bf1a58b30c8e13888a7a